--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-	"name": "web-monorepo",
+	"name": "simon-green",
 	"private": true,
+	"scripts": {
+		"apps": "bun --bun --filter './app/*'",
+		"all": "bun --bun --filter '*'"
+	},
 	"workspaces": {
 		"packages": [
 			"app/*",
@@ -10,36 +14,34 @@
 			"@eslint/compat": "^1.2.5",
 			"@eslint/js": "^9.18.0",
 			"@sveltejs/adapter-auto": "^6.0.0",
-			"@sveltejs/kit": "^2.16.0",
+			"@sveltejs/kit": "^2.36.3",
 			"@sveltejs/package": "^2.0.0",
 			"@sveltejs/vite-plugin-svelte": "^5.0.0",
+			"@tailwindcss/postcss": "^4.1.12",
 			"@tailwindcss/typography": "^0.5.15",
 			"@tailwindcss/vite": "^4.0.0",
 			"@testing-library/jest-dom": "^6.6.3",
 			"@testing-library/svelte": "^5.2.4",
-			"eslint": "^9.18.0",
+			"@types/bun": "latest",
 			"eslint-config-prettier": "^10.0.1",
 			"eslint-plugin-svelte": "^3.0.0",
+			"eslint": "^9.18.0",
 			"globals": "^16.0.0",
 			"jsdom": "^26.0.0",
 			"mdsvex": "^0.12.3",
-			"prettier": "^3.4.2",
+			"postcss": "^8.5.6",
 			"prettier-plugin-svelte": "^3.3.3",
 			"prettier-plugin-tailwindcss": "^0.6.11",
+			"prettier": "^3.4.2",
 			"publint": "^0.3.2",
-			"svelte": "^5.0.0",
+			"svelte-adapter-bun": "^0.5.2",
 			"svelte-check": "^4.0.0",
+			"svelte": "^5.38.6",
 			"tailwindcss": "^4.0.0",
-			"typescript": "^5.0.0",
 			"typescript-eslint": "^8.20.0",
+			"typescript": "^5.0.0",
 			"vite": "^6.2.6",
 			"vitest": "^3.0.0"
 		}
-	},
-	"devDependencies": {
-		"@types/bun": "latest"
-	},
-	"peerDependencies": {
-		"typescript": "^5"
 	}
 }
