--- a/app/ludo/package.json
+++ b/app/ludo/package.json
@@ -31,12 +31,15 @@
 		"@tailwindcss/vite": "catalog:",
 		"@testing-library/jest-dom": "catalog:",
 		"@testing-library/svelte": "catalog:",
+		"drizzle-kit": "catalog:",
+		"drizzle-orm": "catalog:",
 		"eslint": "catalog:",
 		"eslint-config-prettier": "catalog:",
 		"eslint-plugin-svelte": "catalog:",
 		"globals": "catalog:",
 		"jsdom": "catalog:",
 		"mdsvex": "catalog:",
+		"postgres": "catalog:",
 		"prettier": "catalog:",
 		"prettier-plugin-svelte": "catalog:",
 		"prettier-plugin-tailwindcss": "catalog:",
