--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"scripts": {
 		"apps": "bun --bun --filter './app/*'",
 		"all": "bun --bun --filter '*'",
-		"lint": "prettier --check . && eslint ."
+		"lint": "prettier --check . && eslint .",
+		"db:generate": "bun run ./.drizzle/scripts/gen.ts && bun drizzle-kit generate",
+		"db:migrate-prod": "bun drizzle-kit migrate"
 	},
 	"workspaces": {
 		"packages": [
@@ -24,6 +26,8 @@
 			"@testing-library/jest-dom": "^6.6.3",
 			"@testing-library/svelte": "^5.2.4",
 			"@types/bun": "latest",
+			"drizzle-kit": "^0.31.4",
+			"drizzle-orm": "^0.44.5",
 			"eslint-config-prettier": "^10.0.1",
 			"eslint-plugin-svelte": "^3.0.0",
 			"eslint": "^9.18.0",
@@ -31,6 +35,7 @@
 			"jsdom": "^26.0.0",
 			"mdsvex": "^0.12.3",
 			"postcss": "^8.5.6",
+			"postgres": "^3.4.7",
 			"prettier-plugin-svelte": "^3.3.3",
 			"prettier-plugin-tailwindcss": "^0.6.11",
 			"prettier": "^3.4.2",
