feat: add kysely, and connect to database

--- a/app/ludo/package.json
+++ b/app/ludo/package.json
@@ -31,6 +31,7 @@
 		"@tailwindcss/vite": "catalog:",
 		"@testing-library/jest-dom": "catalog:",
 		"@testing-library/svelte": "catalog:",
+		"@types/pg": "catalog:",
 		"drizzle-kit": "catalog:",
 		"drizzle-orm": "catalog:",
 		"eslint": "catalog:",
@@ -38,8 +39,9 @@
 		"eslint-plugin-svelte": "catalog:",
 		"globals": "catalog:",
 		"jsdom": "catalog:",
+		"kysely": "catalog:",
 		"mdsvex": "catalog:",
-		"postgres": "catalog:",
+		"pg": "catalog:",
 		"prettier": "catalog:",
 		"prettier-plugin-svelte": "catalog:",
 		"prettier-plugin-tailwindcss": "catalog:",
