--- a/lib/package.json
+++ b/lib/package.json
@@ -33,7 +33,7 @@
 		},
 		"./ui": "./src/lib/ui/_.ts",
 		"./hooks": "./src/lib/hooks/_.ts",
-		"./db": "./src/lib/db/schema.ts",
+		"./db": "./src/lib/db/_.ts",
 		"./global.css": "./global.css"
 	},
 	"peerDependencies": {
@@ -50,6 +50,7 @@
 		"@tailwindcss/vite": "catalog:",
 		"@testing-library/jest-dom": "catalog:",
 		"@testing-library/svelte": "catalog:",
+		"@types/pg": "catalog:",
 		"drizzle-kit": "catalog:",
 		"drizzle-orm": "catalog:",
 		"eslint": "catalog:",
@@ -57,8 +58,9 @@
 		"eslint-plugin-svelte": "catalog:",
 		"globals": "catalog:",
 		"jsdom": "catalog:",
+		"kysely": "catalog:",
 		"mdsvex": "catalog:",
-		"postgres": "catalog:",
+		"pg": "catalog:",
 		"prettier": "catalog:",
 		"prettier-plugin-svelte": "catalog:",
 		"prettier-plugin-tailwindcss": "catalog:",
