--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "simon-green",
 	"private": true,
+	"type": "module",
 	"scripts": {
-		"apps": "bun --bun --filter './app/*'",
+		"apps": "bun --env-file=.env --bun --filter './app/*'",
 		"all": "bun --bun --filter '*'",
 		"lint": "prettier --check . && eslint .",
 		"db:generate": "bun run ./.drizzle/scripts/gen.ts && bun drizzle-kit generate",
@@ -26,6 +27,7 @@
 			"@testing-library/jest-dom": "^6.6.3",
 			"@testing-library/svelte": "^5.2.4",
 			"@types/bun": "latest",
+			"@types/pg": "^8.15.5",
 			"drizzle-kit": "^0.31.4",
 			"drizzle-orm": "^0.44.5",
 			"eslint-config-prettier": "^10.0.1",
@@ -33,9 +35,10 @@
 			"eslint": "^9.18.0",
 			"globals": "^16.0.0",
 			"jsdom": "^26.0.0",
+			"kysely": "^0.28.5",
 			"mdsvex": "^0.12.3",
+			"pg": "^8.16.3",
 			"postcss": "^8.5.6",
-			"postgres": "^3.4.7",
 			"prettier-plugin-svelte": "^3.3.3",
 			"prettier-plugin-tailwindcss": "^0.6.11",
 			"prettier": "^3.4.2",
