chore: export utils, and remove unused utility

--- a/lib/package.json
+++ b/lib/package.json
@@ -34,6 +34,7 @@
 		"./ui": "./src/lib/ui/_.ts",
 		"./hooks": "./src/lib/hooks/_.ts",
 		"./db": "./src/lib/db/_.ts",
+		"./utils": "./src/lib/utils/_.ts",
 		"./global.css": "./global.css"
 	},
 	"peerDependencies": {
