--- a/app/ludo/package.json
+++ b/app/ludo/package.json
@@ -52,6 +52,7 @@
 		"tailwindcss": "catalog:",
 		"typescript": "catalog:",
 		"typescript-eslint": "catalog:",
+		"valibot": "catalog:",
 		"vite": "catalog:",
 		"vitest": "catalog:"
 	}
