--- a/app/splendor/package.json
+++ b/app/splendor/package.json
@@ -1,6 +1,6 @@
 {
 	"scripts": {
-		"build": "vite build",
+		"build": "BUILDING=true vite build",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"db:generate": "bun drizzle-kit generate",
