--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 			"@tailwindcss/vite": "^4.0.0",
 			"@testing-library/jest-dom": "^6.6.3",
 			"@testing-library/svelte": "^5.2.4",
+			"@total-typescript/ts-reset": "^0.6.1",
 			"@types/bun": "latest",
 			"@types/pg": "^8.15.5",
 			"drizzle-kit": "^0.31.4",
